added dev postgresql database: - first database migrations - route to test connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,29 @@ services:
     restart: always
     ports:
       - 5432:5432
-    volumes:
-      - db:/var/lib/postgresql/data
+    # For the dev database we usually want to reset the data every time we run the container. 
+    # Uncomment this (and lines in "volumes.db" below) to persist data when restarting the container.
+    # volumes:
+    #   - db:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=S3cret
       - POSTGRES_USER=user
       - POSTGRES_DB=authorization_db
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: user-name@domain-name.com
+      PGADMIN_DEFAULT_PASSWORD: strong-password
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
 
 volumes:
-  db:
-    driver: local
+  # Uncomment this to persist data when restarting the container.
+  # db:
+  #   driver: local
+  pgadmin-data:
