--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "authorization-server",
   "type": "module",
   "version": "1.0.0",
-  "description": "Oauth2 authorization server for users of my personal apps.",
+  "description": "Oauth2 authorization server for usage in my personal apps.",
   "main": "build/index.js",
   "scripts": {
     "start": "node build/index.js",
     "dev": "tsx watch index.ts",
     "build": "tsc -p tsconfig.json",
+    "migrations": "node bin/migrate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Danko Lučić",
@@ -15,12 +16,14 @@
   "dependencies": {
     "@fastify/postgres": "^5.2.2",
     "fastify": "^4.26.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "postgrator": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/pg": "^8.11.2",
     "fastify-tsconfig": "^2.0.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   }
 }
