--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "dev": "tsx watch index.ts",
     "build": "tsc -p tsconfig.json",
     "migrations": "node bin/migrate.js",
+    "dummy-data": "node bin/dummy_data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Danko Lučić",
   "license": "AGPL-3.0-only",
   "dependencies": {
     "@fastify/postgres": "^5.2.2",
+    "argon2": "^0.40.1",
     "fastify": "^4.26.1",
     "pg": "^8.11.3",
     "postgrator": "^7.2.0"
