--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,7 @@
     "outDir": "build",
     "lib": ["es2023"],
     "esModuleInterop": true,
-  }
+    "module": "ESNext",
+  },
+  "allowImportingTsExtensions": true
 }
