--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "AGPL-3.0-only",
   "dependencies": {
     "argon2": "^0.40.1",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "pg": "^8.11.3",
     "postgrator": "^7.2.0"
