--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "author": "Danko Lučić",
   "license": "AGPL-3.0-only",
   "dependencies": {
+    "@fastify/static": "^7.0.4",
+    "@fastify/view": "^9.1.0",
     "argon2": "^0.40.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "fastify": "^4.26.1",
     "pg": "^8.11.3",
     "postgrator": "^7.2.0"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/node": "^20.11.24",
     "@types/pg": "^8.11.2",
     "@types/uuid": "^9.0.8",
