- fix linter errors, formatting   - use biome instead of eslint and prettier because eslint 9 configuration is a pain - fix incorrect cookie max age

--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "authorization-server",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "Oauth2 authorization server for usage in my personal apps.",
-  "main": "build/index.js",
-  "scripts": {
-    "start": "node build/index.js",
-    "dev": "tsx watch index.ts",
-    "build": "tsc -p tsconfig.json && npm run styles-prod",
-    "migrations": "node bin/migrate.js",
-    "dummy-data": "tsx bin/dummy_data.ts",
-    "dev-db": "npm run migrations && npm run dummy-data",
-    "styles": "tailwindcss -i ./frontend/styles/input.css -o ./public/build/style.css",
-    "styles-prod": "npm run styles -- --minify",
-    "test": "vitest"
-  },
-  "author": "Danko Lučić",
-  "license": "AGPL-3.0-only",
-  "dependencies": {
-    "@fastify/cookie": "^9.3.1",
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^7.0.4",
-    "@fastify/type-provider-typebox": "^4.0.0",
-    "@fastify/view": "^9.1.0",
-    "@sinclair/typebox": "^0.32.34",
-    "argon2": "^0.40.1",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "fastify": "^4.26.1",
-    "pg": "^8.11.3",
-    "postgrator": "^7.2.0"
-  },
-  "devDependencies": {
-    "@types/ejs": "^3.1.5",
-    "@types/node": "^20.11.24",
-    "@types/pg": "^8.11.2",
-    "@types/uuid": "^9.0.8",
-    "fastify-tsconfig": "^2.0.0",
-    "tailwindcss": "^3.4.4",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.2",
-    "uuid": "^9.0.1",
-    "vitest": "^1.4.0"
-  }
+	"name": "authorization-server",
+	"type": "module",
+	"version": "1.0.0",
+	"description": "Oauth2 authorization server for usage in my personal apps.",
+	"main": "build/index.js",
+	"scripts": {
+		"start": "node build/index.js",
+		"dev": "tsx watch index.ts",
+		"build": "tsc -p tsconfig.json && npm run styles-prod",
+		"migrations": "node bin/migrate.js",
+		"dummy-data": "tsx bin/dummy_data.ts",
+		"dev-db": "npm run migrations && npm run dummy-data",
+		"styles": "tailwindcss -i ./frontend/styles/input.css -o ./public/build/style.css",
+		"styles-prod": "npm run styles -- --minify",
+		"test": "vitest",
+		"lint": "biome lint",
+		"prettier": "biome format --write"
+	},
+	"author": "Danko Lučić",
+	"license": "AGPL-3.0-only",
+	"dependencies": {
+		"@fastify/cookie": "^9.3.1",
+		"@fastify/formbody": "^7.4.0",
+		"@fastify/static": "^7.0.4",
+		"@fastify/type-provider-typebox": "^4.0.0",
+		"@fastify/view": "^9.1.0",
+		"@sinclair/typebox": "^0.32.34",
+		"argon2": "^0.40.1",
+		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
+		"fastify": "^4.26.1",
+		"pg": "^8.11.3",
+		"postgrator": "^7.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@types/ejs": "^3.1.5",
+		"@types/node": "^20.11.24",
+		"@types/pg": "^8.11.2",
+		"@types/uuid": "^9.0.8",
+		"fastify-tsconfig": "^2.0.0",
+		"tailwindcss": "^3.4.4",
+		"tsx": "^4.7.1",
+		"typescript": "^5.4.2",
+		"uuid": "^9.0.1",
+		"vitest": "^1.4.0"
+	}
 }
