--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
 		"outDir": "build",
 		"lib": ["es2023"],
 		"esModuleInterop": true,
-		"module": "ESNext"
+		"module": "NodeNext",
+		"allowImportingTsExtensions": true,
+		"noEmit": true
 	},
 	"allowImportingTsExtensions": true
 }
