--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@playwright/test": "^1.45.1",
 		"@types/ejs": "^3.1.5",
 		"@types/node": "^20.11.24",
 		"@types/pg": "^8.11.2",
