--- a/biome.json
+++ b/biome.json
@@ -17,5 +17,10 @@
 	},
 	"formatter": {
 		"lineWidth": 100
+	},
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"useIgnoreFile": true
 	}
 }
