--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
       - name: Install dependencies
         run: npm ci
 
@@ -42,3 +46,13 @@ jobs:
 
       - name: Run integration tests
         run: npm t
+      
+      - name: Run end-to-end tests
+        run: npm run e2e
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 15
