changes to build process: - typescript now emits compiled js to build directory - build script copies ejs templates and compiled css to build folder - we use .js extension in import statements because typescript insists on it   - see https://github.com/microsoft/TypeScript/issues/49083#issuecomment-1435399267) for more info   - this sucks and I hate it   - alternative might be to use a bundler `moduleResolution` options and a different compiler (swc, esbuild?) to compile ts files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Run linter and style check
         run: npm run lint
 
+      - name: Build for production
+        run: npm run build
+
       - name: Run migrations and populate with dummy data
         run: npm run dev-db
 
