--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"start": "node build/index.js",
 		"dev": "tsx watch index.ts",
-		"build": "tsc -p tsconfig.json && npm run styles-prod",
+		"be": "tsc -p tsconfig.json",
+		"build": "rm -rf ./build && tsc -p tsconfig.json && npm run styles-prod && cp -R ./public ./build/public && cp -R ./frontend ./build/frontend",
 		"migrations": "node bin/migrate.js",
 		"dummy-data": "tsx bin/dummy_data.ts",
 		"dev-db": "npm run migrations && npm run dummy-data",
