--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
 		"lib": ["es2023"],
 		"esModuleInterop": true,
 		"module": "NodeNext",
-		"allowImportingTsExtensions": true,
-		"noEmit": true
+    "target": "ESNext",
+    "moduleResolution": "NodeNext",
 	},
-	"allowImportingTsExtensions": true
 }
