--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/node": "^20.11.24",
 		"@types/pg": "^8.11.2",
 		"@types/uuid": "^9.0.8",
+		"crypto-random-string": "^5.0.0",
 		"fastify-tsconfig": "^2.0.0",
 		"tailwindcss": "^3.4.4",
 		"tsx": "^4.7.1",
