turn off noExplicitAny completely because biome.js doesn't have a comment for ignoring a rule on the entire file

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,8 @@
 				"useArrowFunction": "off"
 			},
 			"suspicious": {
-				"useAwait": "error"
+				"useAwait": "error",
+				"noExplicitAny": "off"
 			}
 		}
 	},
