--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,8 @@
 		"rules": {
 			"recommended": true,
 			"complexity": {
-				"useArrowFunction": "off"
+				"useArrowFunction": "off",
+				"noForEach": "off"
 			},
 			"suspicious": {
 				"useAwait": "error",
