--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@fastify/view": "^9.1.0",
 		"@sinclair/typebox": "^0.32.34",
 		"argon2": "^0.40.1",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"ejs": "^3.1.10",
 		"fastify": "^4.26.1",
