--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@fastify/cookie": "^9.3.1",
 		"@fastify/formbody": "^7.4.0",
+		"@fastify/helmet": "^11.1.1",
 		"@fastify/static": "^7.0.4",
 		"@fastify/type-provider-typebox": "^4.0.0",
 		"@fastify/view": "^9.1.0",
